--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1291,9 +1291,9 @@ user.dir.videos=Videos
 
 winutils.shortcut.description=Diese Verkn\u00fcpfung wurde von PowerFolder erstellt.
 
-wizard.backup_panel.folder_backup_success=Sie haben die automatische Sicherung\nerfolgreich eingerichtet\!
-wizard.backup_panel.pcs_join=Andere Computer k\u00f6nnen nun dem Folder beitreten
-wizard.backup_panel.select=Bitte w\u00e4hlen Sie das Verzeichnis, da\u00df gesichert werden soll.
+wizard.what_to_do.folder_backup_success=Sie haben die automatische Sicherung\nerfolgreich eingerichtet\!
+wizard.what_to_do.pcs_join=Andere Computer k\u00f6nnen nun dem Folder beitreten
+wizard.what_to_do.backp.select=Bitte w\u00e4hlen Sie das Verzeichnis, da\u00df gesichert werden soll.
 wizard.basic_setup.computer_name=Name dieses Computers
 wizard.basic_setup.default_folder_name=Synchronisierte Dateien
 wizard.basic_setup.lan_only=Nur LAN
@@ -1323,17 +1323,17 @@ wizard.create_folder.working=Erstelle PowerFolder, bitte warten.
 wizard.file_sharing.shared_success=Ein neuer Folder wurde erstellt\!\nSie k\u00f6nnen nun anderen Benutzern Zugriff geben.
 wizard.folder_invitation.intro=Sie haben eine Einladung von {0} erhalten
 wizard.folder_invitation.title=Folder Einladung
-wizard.host_panel.folder_host_success=Verzeichnis wurde erfolgreich freigegeben\!\n
-wizard.host_panel.pcs_join=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
-wizard.host_panel.select=Welches Verzeichnis soll freigegeben werden?
-wizard.invite.select_local_directory=W\u00e4hlen Sie das lokale Verzeichnis aus
+wizard.what_to_do.folder_host_success=Verzeichnis wurde erfolgreich freigegeben\!\n
+wizard.what_to_do.host_pcs_join=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
+wizard.what_to_do.host_pcs.select=Welches Verzeichnis soll freigegeben werden?
+wizard.what_to_do.invite.select_local=W\u00e4hlen Sie das lokale Verzeichnis aus
 wizard.load_invitation.add_to_friends={0} der Freundesliste hizuf\u00fcgen
 wizard.load_invitation.choose_file=Einladungs-Datei \u00f6ffnen
 wizard.load_invitation.select=Einladung-Datei ausw\u00e4hlen
 wizard.load_invitation.select_file=Einladungs-Datei auswählen
 wizard.load_invitation.title=Einladung \u00f6ffnen
 wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
-wizard.project_panel.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
+wizard.project_name.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
 wizard.project_panel.select=Bitte w\u00e4hlen Sie das Verzeichnis mit den Projektdateien aus
 wizard.project_name.choose=Projektname w\u00e4hlen
 wizard.project_name.enter_name=Bitte geben Sie einen Namen f\u00fcr Ihr Projekt an
@@ -1360,9 +1360,9 @@ wizard.setup_dns.title=Dynamische Internetadresse einstellen
 wizard.setup_dns.validate=\u00dcberpr\u00fcfen
 wizard.setup_success=Setup erfolgreich
 wizard.success_join=Der Folder wurde auf diesem Computer eingerichtet\!
-wizard.sync_pcs_panel.select=Bitte wählen Sie das Verzeichnis, welches synchronisiert werden soll
-wizard.sync_pcs_panel.folder_sync_success=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
-wizard.sync_pcs_panel.pcs_join=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
+wizard.what_to_do.sync_pcs.select=Bitte wählen Sie das Verzeichnis, welches synchronisiert werden soll
+wizard.what_to_do.sync_pcs.success=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
+wizard.what_to_do.sync_pcs.pcs_join=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
 wizard.webservice.enter_account=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
 wizard.webservice.learn_more=Was ist der PowerFolder Online Speicher?
 wizard.webservice.login=Online Speicher Login
