--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1225,9 +1225,9 @@ white_list.name=A\u00F1oadir a los patrones a ignorar
 
 winutils.shortcut.description=Este atajo fue puesto por PowerFolder
 
-wizard.backup_panel.folder_backup_success=Has creado una carpeta de respaldo\!\n
-wizard.backup_panel.pcs_join=Otras computadoras pueden ahora unirse a esta carpeta
-wizard.backup_panel.select=Faor de seleccionar el directorio que necesita ser respaldado
+wizard.what_to_do.folder_backup_success=Has creado una carpeta de respaldo\!\n
+wizard.what_to_do.pcs_join=Otras computadoras pueden ahora unirse a esta carpeta
+wizard.what_to_do.backp.select=Faor de seleccionar el directorio que necesita ser respaldado
 wizard.basic_setup.computer_name=Nombre esta computadora
 wizard.basic_setup.default_folder_name=Archivos Sincronizados
 wizard.basic_setup.lan_only=LAN solamente
@@ -1257,17 +1257,17 @@ wizard.create_folder.working=Creando un PoewrFolder, favor de esperar.
 wizard.file_sharing.shared_success=\u00A1Ha compartido con \u00E9xito una nueva carpeta\!\nAhora otros usuarios pueden unirse
 wizard.folder_invitation.intro=Ud. ha recibido una invitaci\u00F3n de {0}
 wizard.folder_invitation.title=Archivo de Invitaci\u00F3n
-wizard.host_panel.folder_host_success=Has configurado con \u00E9xito  una carpeta en este host\!\n
-wizard.host_panel.pcs_join=Ahora otras computadoras pueden ahora unirse a esta carpeta
-wizard.host_panel.select=Favor de elegir el directorio pare este host
-wizard.invite.select_local_directory=Favor de elegir el directorio local para estos archivos.
+wizard.what_to_do.folder_host_success=Has configurado con \u00E9xito  una carpeta en este host\!\n
+wizard.what_to_do.host_pcs_join=Ahora otras computadoras pueden ahora unirse a esta carpeta
+wizard.what_to_do.host_pcs.select=Favor de elegir el directorio pare este host
+wizard.what_to_do.invite.select_local=Favor de elegir el directorio local para estos archivos.
 wizard.load_invitation.add_to_friends=Agregar {0} a amigos
 wizard.load_invitation.choose_file=Elija el archivo invitaci\u00F3n
 wizard.load_invitation.select=Seleccionar archivo invitaci\u00F3n
 wizard.load_invitation.select_file=Por favor, seleccione el archivo invitaci\u00F3n
 wizard.load_invitation.title=Abrir invitaci\u00F3n
 wizard.login_online_storage.setup_default=Configurar la carpeta ha ser sincronizada por omisi\u00F3n.
-wizard.project_panel.folder_project_success=Has configurado con \u00E9xito una carpeta de proyectos\!\n
+wizard.project_name.folder_project_success=Has configurado con \u00E9xito una carpeta de proyectos\!\n
 wizard.project_panel.select=Favor de seleccionar una carpeta para proyectos.
 wizard.project_name.choose=Elija el nombre del proyecto
 wizard.project_name.enter_name=Teclee el nombre de su proyecto
@@ -1294,9 +1294,9 @@ wizard.setup_dns.title=Configurar dns (din\u00E1mica)
 wizard.setup_dns.validate=Validar
 wizard.setup_success=Ajustes realizados con \u00E9xito
 wizard.success_join=Te has unido con \u00E9xito a una carpeta.\!
-wizard.sync_pcs_panel.select=Favor de seleccionar el directorio que deber ser sincronizado
-wizard.sync_pcs_panel.folder_sync_success=Has instalado exitosamente una carpeta espejo\!\n
-wizard.sync_pcs_panel.pcs_join=Est\u00E1 listo para unir m\u00E1s PC en esta carpeta
+wizard.what_to_do.sync_pcs.select=Favor de seleccionar el directorio que deber ser sincronizado
+wizard.what_to_do.sync_pcs.success=Has instalado exitosamente una carpeta espejo\!\n
+wizard.what_to_do.sync_pcs.pcs_join=Est\u00E1 listo para unir m\u00E1s PC en esta carpeta
 wizard.webservice.enter_account=Favor de teclear la cuenta para accesar el almac\u00E9n en linea
 wizard.webservice.learn_more=\u00BFQue es el almac\u00E9n en linea de PowerFolder?
 wizard.webservice.login=Clave de almacen en linea
