--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1228,9 +1228,9 @@ white_list.name=Ajouter \u00E0 la liste des formes de filtrage ignor\u00E9es
 
 winutils.shortcut.description=Raccourci cr\u00E9\u00E9 par PowerFolder
 
-wizard.backup_panel.folder_backup_success=Dossier de sauvegarde configur\u00E9 avec succ\u00E8s\!\n
-wizard.backup_panel.pcs_join=D'autres ordianteurs pourront rejoindre ce dossier maintenant
-wizard.backup_panel.select=Merci d'indiquer le dossier \u00E0 sauvegarder
+wizard.what_to_do.folder_backup_success=Dossier de sauvegarde configur\u00E9 avec succ\u00E8s\!\n
+wizard.what_to_do.pcs_join=D'autres ordianteurs pourront rejoindre ce dossier maintenant
+wizard.what_to_do.backp.select=Merci d'indiquer le dossier \u00E0 sauvegarder
 wizard.basic_setup.computer_name=Nom de cet ordinateur
 wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.lan_only=R\u00E9seau local LAN
@@ -1260,17 +1260,17 @@ wizard.create_folder.working=Cr\u00E9ation en cours, veuillez patienter.
 wizard.file_sharing.shared_success=Vous venez de partager un nouveau dossier \!\nD'autres utilisateurs peuvent maintenant s'y connecter
 wizard.folder_invitation.intro=Vous avez re\u00E7u une invitation de {0}
 wizard.folder_invitation.title=Dossier d'invitation
-wizard.host_panel.folder_host_success=Cr\u00E9ation d'un dossier d'h\u00E9bergement r\u00E9ussie\!\n
-wizard.host_panel.pcs_join=D'autres ordinateurs peuvent rejoindre ce dossier maintenant
-wizard.host_panel.select=Merci d'indiquer le dossier qui servira d'h\u00E9bergement
-wizard.invite.select_local_directory=Merci d'indiquer le dossier local cible pour ces fichiers
+wizard.what_to_do.folder_host_success=Cr\u00E9ation d'un dossier d'h\u00E9bergement r\u00E9ussie\!\n
+wizard.what_to_do.host_pcs_join=D'autres ordinateurs peuvent rejoindre ce dossier maintenant
+wizard.what_to_do.host_pcs.select=Merci d'indiquer le dossier qui servira d'h\u00E9bergement
+wizard.what_to_do.invite.select_local=Merci d'indiquer le dossier local cible pour ces fichiers
 wizard.load_invitation.add_to_friends=Ajouter {0} \u00E0 la liste d'ami(e)s
 wizard.load_invitation.choose_file=Indiquer le fichier d'invitation
 wizard.load_invitation.select=S\u00E9lectionner le fichier d'invitation
 wizard.load_invitation.select_file=Merci de s\u00E9lectionner le fichier d'invitation
 wizard.load_invitation.title=Charger l'invitation
 wizard.login_online_storage.setup_default=Configurer le dossier de synchronisation par d\u00E9faut.
-wizard.project_panel.folder_project_success=Cr\u00E9ation d'un dossier de projet r\u00E9ussie\!\n
+wizard.project_name.folder_project_success=Cr\u00E9ation d'un dossier de projet r\u00E9ussie\!\n
 wizard.project_panel.select=Merci d'indiquer le dossier de projet
 wizard.project_name.choose=Choisir le nom du projet
 wizard.project_name.enter_name=Saisir le nom de votre projet
@@ -1297,9 +1297,9 @@ wizard.setup_dns.title=Configuration facultative du (dynamic) DNS
 wizard.setup_dns.validate=Validation
 wizard.setup_success=Configuration termin\u00E9e avec succ\u00E8s
 wizard.success_join=Dossier rejoint avec succ\u00E8s\!
-wizard.sync_pcs_panel.select=Merci d'indiquer le dossier \u00E0 synchroniser
-wizard.sync_pcs_panel.folder_sync_success=Vous venez de configurer un dossier dupliqu\u00E9 \!\n
-wizard.sync_pcs_panel.pcs_join=D'autres PCs peuvent se connecter au dossier maintenant
+wizard.what_to_do.sync_pcs.select=Merci d'indiquer le dossier \u00E0 synchroniser
+wizard.what_to_do.sync_pcs.success=Vous venez de configurer un dossier dupliqu\u00E9 \!\n
+wizard.what_to_do.sync_pcs.pcs_join=D'autres PCs peuvent se connecter au dossier maintenant
 wizard.webservice.enter_account=Merci de saisir vos identifiants pour vous connecter \u00E0 l'espace de stockage en ligne
 wizard.webservice.learn_more=Qu'est-ce que l'espace de stockage en ligne de PowerFolder ?
 wizard.webservice.login=Identifiant de sauvegarde en ligne
