--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1226,9 +1226,9 @@ white_list.name=Aggiungi ai percorsi da ignorare
 
 winutils.shortcut.description=Questo collegamento \u00E8 stato aggiunto da PowerFolder
 
-wizard.backup_panel.folder_backup_success=Hai impostato correttamente una cartella di backup\!\n
-wizard.backup_panel.pcs_join=Ora anche altri computer possono aggiungersi a questa cartella
-wizard.backup_panel.select=Si prega di selezionare la directory da backuppare
+wizard.what_to_do.folder_backup_success=Hai impostato correttamente una cartella di backup\!\n
+wizard.what_to_do.pcs_join=Ora anche altri computer possono aggiungersi a questa cartella
+wizard.what_to_do.backp.select=Si prega di selezionare la directory da backuppare
 wizard.basic_setup.computer_name=Nome di questo computer
 wizard.basic_setup.default_folder_name=Files sincronizzati
 wizard.basic_setup.lan_only=solo LAN
@@ -1258,17 +1258,17 @@ wizard.create_folder.working=Creazione del PowerFolder, attendere prego.
 wizard.file_sharing.shared_success=Hai condiviso una nuova cartella\!\nAltri utenti ora potranno accedervi
 wizard.folder_invitation.intro=Hai ricevuto un invito da {0}
 wizard.folder_invitation.title=Invito alla cartella
-wizard.host_panel.folder_host_success=Hai impostato correttamente una cartella di host\!\n
-wizard.host_panel.pcs_join=Ora gli altri computer possono unirsi a questa cartella
-wizard.host_panel.select=Si prega di selezionare la directory per l'host
-wizard.invite.select_local_directory=Si prega di selezionare la directory locale per questi file
+wizard.what_to_do.folder_host_success=Hai impostato correttamente una cartella di host\!\n
+wizard.what_to_do.host_pcs_join=Ora gli altri computer possono unirsi a questa cartella
+wizard.what_to_do.host_pcs.select=Si prega di selezionare la directory per l'host
+wizard.what_to_do.invite.select_local=Si prega di selezionare la directory locale per questi file
 wizard.load_invitation.add_to_friends=Aggiungi {0} agli amici
 wizard.load_invitation.choose_file=Scegli il file dell'invito
 wizard.load_invitation.select=Scegli il file dell'invito
 wizard.load_invitation.select_file=Scegli il file dell'invito
 wizard.load_invitation.title=Carica un invito
 wizard.login_online_storage.setup_default=Impostazioni di default della cartella sincronizzata.
-wizard.project_panel.folder_project_success=Avete impostato correttamente la cartella per il progetto\!\n
+wizard.project_name.folder_project_success=Avete impostato correttamente la cartella per il progetto\!\n
 wizard.project_panel.select=Si prega di selezionare la directory per il progetto
 wizard.project_name.choose=Scegli il nome del progetto
 wizard.project_name.enter_name=Inserisci il nome del tuo progetto
@@ -1295,9 +1295,9 @@ wizard.setup_dns.title=Imposta un dns (dinamico)
 wizard.setup_dns.validate=Validazione
 wizard.setup_success=Setup completato
 wizard.success_join=Ti sei aggiunto con successo alla cartella\!
-wizard.sync_pcs_panel.select=Seleziona da directory da sincronizzare
-wizard.sync_pcs_panel.folder_sync_success=Hai impostato con successo una cartella mirror\!\n
-wizard.sync_pcs_panel.pcs_join=Ora sei pronto a far accedere pi\u00F9 PC in questa cartella
+wizard.what_to_do.sync_pcs.select=Seleziona da directory da sincronizzare
+wizard.what_to_do.sync_pcs.success=Hai impostato con successo una cartella mirror\!\n
+wizard.what_to_do.sync_pcs.pcs_join=Ora sei pronto a far accedere pi\u00F9 PC in questa cartella
 wizard.webservice.enter_account=Inserite i vostri dati per fare il login nell'Online Storage
 wizard.webservice.learn_more=Cos'\u00E8 il PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
