--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1223,9 +1223,9 @@ white_list.name=\u7121\u8996\u30D1\u30BF\u30FC\u30F3\u306B\u8FFD\u52A0(I)
 
 winutils.shortcut.description=\u3053\u306E\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8\u306F PowerFolder \u306B\u3088\u3063\u3066\u3053\u3053\u306B\u7F6E\u304B\u308C\u307E\u3057\u305F
 
-wizard.backup_panel.folder_backup_success=\u30D5\u30A9\u30EB\u30C0\u30FB\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
-wizard.backup_panel.pcs_join=\u4ED6\u306E\u30B3\u30F3\u30D4\u30E5\u30FC\u30BF\u304C\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3067\u304D\u308B\u3088\u3046\u306B\u306A\u308A\u307E\u3057\u305F
-wizard.backup_panel.select=\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3059\u308B\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
+wizard.what_to_do.folder_backup_success=\u30D5\u30A9\u30EB\u30C0\u30FB\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
+wizard.what_to_do.pcs_join=\u4ED6\u306E\u30B3\u30F3\u30D4\u30E5\u30FC\u30BF\u304C\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3067\u304D\u308B\u3088\u3046\u306B\u306A\u308A\u307E\u3057\u305F
+wizard.what_to_do.backp.select=\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3059\u308B\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
 ##wizard.basic_setup.computer_name=\u3053\u306E\u30B3\u30F3\u30D4\u30E5\u30FC\u30BF\u306E\u540D\u524D
 ##wizard.basic_setup.default_folder_name=\u540C\u671F\u30D5\u30A1\u30A4\u30EB
 wizard.basic_setup.lan_only=LAN \u5185\u9650\u5B9A
@@ -1255,17 +1255,17 @@ wizard.create_folder.working=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u3092\u4
 wizard.file_sharing.shared_success=\u65B0\u898F\u30D5\u30A9\u30EB\u30C0\u306E\u5171\u6709\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n\u4ED6\u30E6\u30FC\u30B6\u30FC\u306E\u53C2\u52A0\u304C\u53EF\u80FD\u306B\u306A\u308A\u307E\u3057\u305F\u3002
 wizard.folder_invitation.intro={0} \u3055\u3093\u304B\u3089\u62DB\u5F85\u72B6\u3092\u53D7\u3051\u53D6\u308A\u307E\u3057\u305F\u3002
 wizard.folder_invitation.title=\u30D5\u30A9\u30EB\u30C0\u3078\u306E\u62DB\u5F85\u72B6
-wizard.host_panel.folder_host_success=\u30DB\u30B9\u30C8\u30FB\u30D5\u30A9\u30EB\u30C0\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
-wizard.host_panel.pcs_join=\u4ED6\u306E\u30B3\u30F3\u30D4\u30E5\u30FC\u30BF\u304C\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3067\u304D\u308B\u3088\u3046\u306B\u306A\u308A\u307E\u3057\u305F
-wizard.host_panel.select=\u30DB\u30B9\u30C8\u306B\u3059\u308B\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
-wizard.invite.select_local_directory=\u30D5\u30A1\u30A4\u30EB\u306E\u30ED\u30FC\u30AB\u30EB\u4FDD\u5B58\u5148\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
+wizard.what_to_do.folder_host_success=\u30DB\u30B9\u30C8\u30FB\u30D5\u30A9\u30EB\u30C0\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
+wizard.what_to_do.host_pcs_join=\u4ED6\u306E\u30B3\u30F3\u30D4\u30E5\u30FC\u30BF\u304C\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3067\u304D\u308B\u3088\u3046\u306B\u306A\u308A\u307E\u3057\u305F
+wizard.what_to_do.host_pcs.select=\u30DB\u30B9\u30C8\u306B\u3059\u308B\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
+wizard.what_to_do.invite.select_local=\u30D5\u30A1\u30A4\u30EB\u306E\u30ED\u30FC\u30AB\u30EB\u4FDD\u5B58\u5148\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
 wizard.load_invitation.add_to_friends={0} \u3055\u3093\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
 wizard.load_invitation.choose_file=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306E\u9078\u629E
 wizard.load_invitation.select=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306E\u9078\u629E
 wizard.load_invitation.select_file=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB(.invitation)\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
 wizard.load_invitation.title=\u62DB\u5F85\u72B6\u306E\u8AAD\u307F\u8FBC\u307F
 wizard.login_online_storage.setup_default=\u30C7\u30D5\u30A9\u30EB\u30C8\u306E\u540C\u671F\u30D5\u30A9\u30EB\u30C0\u3092\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-wizard.project_panel.folder_project_success=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u30FB\u30D5\u30A9\u30EB\u30C0\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
+wizard.project_name.folder_project_success=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u30FB\u30D5\u30A9\u30EB\u30C0\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
 wizard.project_panel.select=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
 wizard.project_name.choose=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u540D\u306E\u9078\u629E
 wizard.project_name.enter_name=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u540D\u524D\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
@@ -1292,9 +1292,9 @@ wizard.setup_dns.title=\uFF08\u52D5\u7684\uFF09DNS \u306E\u30BB\u30C3\u30C8\u30A
 wizard.setup_dns.validate=\u691C\u8A3C
 wizard.setup_success=\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u6210\u529F
 wizard.success_join=\u30D5\u30A9\u30EB\u30C0\u3078\u306E\u53C2\u52A0\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01
-wizard.sync_pcs_panel.select=\u540C\u671F\u3059\u308B\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
-wizard.sync_pcs_panel.folder_sync_success=\u30D5\u30A9\u30EB\u30C0\u306E\u30DF\u30E9\u30FC\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
-wizard.sync_pcs_panel.pcs_join=\u4ED6 PC \u3092\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3055\u305B\u308B\u3053\u3068\u304C\u3067\u304D\u308B\u72B6\u614B\u306B\u306A\u308A\u307E\u3057\u305F\u3002
+wizard.what_to_do.sync_pcs.select=\u540C\u671F\u3059\u308B\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
+wizard.what_to_do.sync_pcs.success=\u30D5\u30A9\u30EB\u30C0\u306E\u30DF\u30E9\u30FC\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
+wizard.what_to_do.sync_pcs.pcs_join=\u4ED6 PC \u3092\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3055\u305B\u308B\u3053\u3068\u304C\u3067\u304D\u308B\u72B6\u614B\u306B\u306A\u308A\u307E\u3057\u305F\u3002
 wizard.webservice.enter_account=Web\u30B5\u30FC\u30D3\u30B9\u3078\u306E\u30ED\u30B0\u30A4\u30F3\u7528\u30A2\u30AB\u30A6\u30F3\u30C8\u30C7\u30FC\u30BF\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 wizard.webservice.learn_more=PowerFolder Web\u30B5\u30FC\u30D3\u30B9\u3068\u306F\uFF1F
 wizard.webservice.login=\u30AA\u30F3\u30E9\u30A4\u30F3\u30B9\u30C8\u30EC\u30FC\u30B8 \u30ED\u30B0\u30A4\u30F3
