--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1297,8 +1297,8 @@ wizard.setup_dns.title=Setup (dynamic) dns
 wizard.setup_success=Setup success
 ##wizard.success_join=You have successfully joined the folder\!
 ##wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
-wizard.sync_pcs_panel.folder_sync_success=U heeft succesvol een "exacte kopie" van een folder op gezet\!\n
-wizard.sync_pcs_panel.pcs_join=U kunt nu meerdere PCs lid maken van deze folder
+wizard.what_to_do.sync_pcs.success=U heeft succesvol een "exacte kopie" van een folder op gezet\!\n
+wizard.what_to_do.sync_pcs.pcs_join=U kunt nu meerdere PCs lid maken van deze folder
 ##wizard.webservice.enter_account=Please enter your account details to login to Online Storage
 ##wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Opslag Inloggen
