--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1297,8 +1297,8 @@ wizard.setup_dns.title=Konfiguruj (dynamiczny) dns
 wizard.setup_success=Konfiguracja zako\u0144czona pomy\u015blnie
 ##wizard.success_join=You have successfully joined the folder\!
 ##wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
-wizard.sync_pcs_panel.folder_sync_success=Pomy\u015blnie skonfigurowano folder lustrzany\!\n
-wizard.sync_pcs_panel.pcs_join=Inne komputery mog\u0105 si\u0119 teraz przy\u0142\u0105czy\u0107
+wizard.what_to_do.sync_pcs.success=Pomy\u015blnie skonfigurowano folder lustrzany\!\n
+wizard.what_to_do.sync_pcs.pcs_join=Inne komputery mog\u0105 si\u0119 teraz przy\u0142\u0105czy\u0107
 wizard.webservice.enter_account=Wprowad\u017a dane Twojego konta, aby zalogowa\u0107 si\u0119 do Archiwum Online
 wizard.webservice.learn_more=Co to jest Archiwum Online PowerFolder?
 wizard.webservice.login=Logowanie do Archiwum Online
