--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1298,7 +1298,7 @@ wizard.setup_success=Inst\u00e4llningarna lyckades
 ##wizard.success_join=You have successfully joined the folder\!
 ##wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
 ##wizard.sync_pcs_panel.folder_sync_success=You successfully set up a folder mirror\!\n
-wizard.sync_pcs_panel.pcs_join=Andra datorer kan g\u00e5 med i denna folder nu
+wizard.what_to_do.sync_pcs.pcs_join=Andra datorer kan g\u00e5 med i denna folder nu
 ##wizard.webservice.enter_account=Please enter your account details to login to Online Storage
 ##wizard.webservice.learn_more=What is PowerFolder Online Storage?
 ##wizard.webservice.login=Online Storage Login
