--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1225,9 +1225,9 @@ white_list.name=\u6dfb\u52a0\u5230\u5ffd\u7565\u6837\u5f0f
 
 winutils.shortcut.description=\u6b64\u5feb\u6377\u65b9\u5f0f\u7531PowerFolder\u653e\u7f6e\u4e8e\u6b64
 
-wizard.backup_panel.folder_backup_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u6587\u4ef6\u5939\u5907\u4efd\uff01\n
-wizard.backup_panel.pcs_join=\u5176\u4ed6\u8ba1\u7b97\u673a\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u8fd9\u4e2a\u6587\u4ef6\u5939
-wizard.backup_panel.select=\u8bf7\u9009\u62e9\u9700\u8981\u5907\u4efd\u7684\u76ee\u5f55
+wizard.what_to_do.folder_backup_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u6587\u4ef6\u5939\u5907\u4efd\uff01\n
+wizard.what_to_do.pcs_join=\u5176\u4ed6\u8ba1\u7b97\u673a\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u8fd9\u4e2a\u6587\u4ef6\u5939
+wizard.what_to_do.backp.select=\u8bf7\u9009\u62e9\u9700\u8981\u5907\u4efd\u7684\u76ee\u5f55
 wizard.basic_setup.computer_name=\u547d\u540d\u8fd9\u53f0\u8ba1\u7b97\u673a
 wizard.basic_setup.default_folder_name=\u6587\u4ef6\u5df2\u7ecf\u540c\u6b65
 wizard.basic_setup.lan_only=\u4ec5\u7528\u5c40\u57df\u7f51
@@ -1257,17 +1257,17 @@ wizard.create_folder.working=\u6b63\u5728\u521b\u5efaPowerFolder\uff0c\u8bf7\u7a
 wizard.file_sharing.shared_success=\u5df2\u7ecf\u6210\u529f\u5171\u4eab\u65b0\u6587\u4ef6\u5939\uff01\r\n\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u5176\u4ed6\u7528\u6237
 wizard.folder_invitation.intro=\u4f60\u6536\u5230\u6765\u81ea{0}\u7684\u9080\u8bf7
 wizard.folder_invitation.title=\u6587\u4ef6\u5939\u9080\u8bf7
-wizard.host_panel.folder_host_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u4e00\u4e2a\u4e3b\u6587\u4ef6\u5939\uff01\n
-wizard.host_panel.pcs_join=\u5176\u5b83\u8ba1\u7b97\u673a\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u8fd9\u4e2a\u6587\u4ef6\u5939
-wizard.host_panel.select=\u8bf7\u9009\u62e9\u4f5c\u4e3a\u4e3b\u6587\u4ef6\u5939\u7684\u76ee\u5f55
-wizard.invite.select_local_directory=\u8bf7\u4e3a\u6587\u4ef6\u9009\u62e9\u672c\u5730\u7684\u76ee\u6807\u76ee\u5f55
+wizard.what_to_do.folder_host_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u4e00\u4e2a\u4e3b\u6587\u4ef6\u5939\uff01\n
+wizard.what_to_do.host_pcs_join=\u5176\u5b83\u8ba1\u7b97\u673a\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u8fd9\u4e2a\u6587\u4ef6\u5939
+wizard.what_to_do.host_pcs.select=\u8bf7\u9009\u62e9\u4f5c\u4e3a\u4e3b\u6587\u4ef6\u5939\u7684\u76ee\u5f55
+wizard.what_to_do.invite.select_local=\u8bf7\u4e3a\u6587\u4ef6\u9009\u62e9\u672c\u5730\u7684\u76ee\u6807\u76ee\u5f55
 wizard.load_invitation.add_to_friends=\u6dfb\u52a0 {0} \u4e3a\u597d\u53cb
 wizard.load_invitation.choose_file=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
 wizard.load_invitation.select=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
 wizard.load_invitation.select_file=\u8bf7\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
 wizard.load_invitation.title=\u8f7d\u5165\u9080\u8bf7
 wizard.login_online_storage.setup_default=\u8bbe\u7f6e\u9ed8\u8ba4\u7684\u540c\u6b65\u6587\u4ef6\u5939
-wizard.project_panel.folder_project_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u4e00\u4e2a\u9879\u76ee\u6587\u4ef6\u5939\uff01
+wizard.project_name.folder_project_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u4e00\u4e2a\u9879\u76ee\u6587\u4ef6\u5939\uff01
 wizard.project_panel.select=\u8bf7\u9009\u62e9\u9879\u76ee\u6587\u4ef6\u5939
 wizard.project_name.choose=\u9009\u62e9\u9879\u76ee\u540d\u79f0
 wizard.project_name.enter_name=\u8f93\u5165\u4f60\u7684\u9879\u76ee\u540d\u79f0
@@ -1294,9 +1294,9 @@ wizard.setup_dns.title=\u8bbe\u7f6e\u52a8\u6001DNS
 wizard.setup_dns.validate=\u9a8c\u8bc1
 wizard.setup_success=\u8bbe\u7f6e\u6210\u529f
 wizard.success_join=\u4f60\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u8fd9\u4e2a\u6587\u4ef6\u5939\uff01
-wizard.sync_pcs_panel.select=\u8bf7\u9009\u62e9\u9700\u8981\u540c\u6b65\u7684\u6587\u4ef6\u5939
-wizard.sync_pcs_panel.folder_sync_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u6587\u4ef6\u5939\u955c\u50cf\!\n
-wizard.sync_pcs_panel.pcs_join=\u5176\u5b83\u7535\u8111\u5df2\u7ecf\u53ef\u4ee5\u52a0\u5165\u8be5\u6587\u4ef6\u5939\u4e86
+wizard.what_to_do.sync_pcs.select=\u8bf7\u9009\u62e9\u9700\u8981\u540c\u6b65\u7684\u6587\u4ef6\u5939
+wizard.what_to_do.sync_pcs.success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u6587\u4ef6\u5939\u955c\u50cf\!\n
+wizard.what_to_do.sync_pcs.pcs_join=\u5176\u5b83\u7535\u8111\u5df2\u7ecf\u53ef\u4ee5\u52a0\u5165\u8be5\u6587\u4ef6\u5939\u4e86
 wizard.webservice.enter_account=\u8f93\u5165\u60a8\u7684\u8d26\u53f7\u6765\u767b\u5f55\u7f51\u7edc\u670d\u52a1
 wizard.webservice.learn_more=\u4ec0\u4e48\u662fPowerFolder\u7f51\u7edc\u670d\u52a1?
 wizard.webservice.login=\u767b\u5f55\u5728\u7ebf\u5b58\u50a8
