--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1177,9 +1177,9 @@ white_list.key=I
 white_list.name=Add to ignore patterns
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
-wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
-wizard.backup_panel.pcs_join=Other computers can join this folder now
-wizard.backup_panel.select=Please select the directory which should be backed up
+wizard.what_to_do.folder_backup_success=You successfully set up a folder backup\!\n
+wizard.what_to_do.pcs_join=Other computers can join this folder now
+wizard.what_to_do.backp.select=Please select the directory which should be backed up
 wizard.basic_setup.enternick=Please enter your nickname
 wizard.basic_setup.lan_only=LAN only
 wizard.basic_setup.networking=Connect to
@@ -1209,17 +1209,17 @@ wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.file_sharing.shared_success=You successfully shared a new folder\!\nOther users may join now
 wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.folder_invitation.title=Folder Invitation
-wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
-wizard.host_panel.pcs_join=Other computers can join this folder now
-wizard.host_panel.select=Please select the directory which should be the host
-wizard.invite.select_local_directory=Please select local target directory for the files
+wizard.what_to_do.folder_host_success=You successfully set up a host folder\!\n
+wizard.what_to_do.host_pcs_join=Other computers can join this folder now
+wizard.what_to_do.host_pcs.select=Please select the directory which should be the host
+wizard.what_to_do.invite.select_local=Please select local target directory for the files
 wizard.load_invitation.add_to_friends=Add {0} to friends
 wizard.load_invitation.choose_file=Choose the invitation file
 wizard.load_invitation.select=Select invitation file
 wizard.load_invitation.select_file=Please select invitation file
 wizard.load_invitation.title=Load invitation
 wizard.login_online_storage.setup_default=Setup default synchronised folder.
-wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_panel.select=Please select the project directory
 wizard.project_name.choose=Choose project name
 wizard.project_name.enter_name=Enter the name of your project
@@ -1246,9 +1246,9 @@ wizard.setup_dns.title=Setup (dynamic) dns
 wizard.setup_dns.validate=Validate
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
-wizard.sync_pcs_panel.folder_sync_success=You successfully set up a folder mirror\!\n
-wizard.sync_pcs_panel.pcs_join=Other computers can join this folder now
-wizard.sync_pcs_panel.select=Please select the directory which should be synchronised
+wizard.what_to_do.sync_pcs.success=You successfully set up a folder mirror\!\n
+wizard.what_to_do.sync_pcs.pcs_join=Other computers can join this folder now
+wizard.what_to_do.sync_pcs.select=Please select the directory which should be synchronised
 wizard.webservice.enter_account=Please enter your account details to login to Online Storage
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
