--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1064,9 +1064,9 @@ user.dir.videos=V\u00eddeos
 
 winutils.shortcut.description=Este atalho foi criado pelo PowerFolder
 
-wizard.backup_panel.folder_backup_success=Voc\u00ea configurou com sucesso o backup da pasta\!\n
-wizard.backup_panel.pcs_join=Outros computadores j\u00e1 podem associar-se a esta pasta
-wizard.backup_panel.select=Por favor selecione o diret\u00f3rio a ser feito o backup
+wizard.what_to_do.folder_backup_success=Voc\u00ea configurou com sucesso o backup da pasta\!\n
+wizard.what_to_do.pcs_join=Outros computadores j\u00e1 podem associar-se a esta pasta
+wizard.what_to_do.backp.select=Por favor selecione o diret\u00f3rio a ser feito o backup
 wizard.basic_setup.enternick=Por favor digite seu apelido
 wizard.basic_setup.lan_only=Apenas Rede Local
 wizard.basic_setup.networking=Conectar a
@@ -1091,10 +1091,10 @@ wizard.create_folder.title=Criando pasta PowerFolder
 wizard.create_folder.failed=N\u00e3o foi poss\u00edvel criar pasta PowerFolder
 wizard.description=Abre assistente
 wizard.file_sharing.shared_success=A nova pasta est\u00e1 compartilhada\!\nOutros usu\u00e1rios j\u00e1 podem se associar
-wizard.host_panel.folder_host_success=Voc\u00ea configurou uma pasta hospedeira com sucesso\!\n
-wizard.host_panel.pcs_join=Outros computadores j\u00e1 podem associar-se a esta pasta
-wizard.host_panel.select=Por favor selecione o diret\u00f3rio para ser o hospedeiro
-wizard.invite.select_local_directory=Por favor selecione o diret\u00f3rio local de destino para os arquivos
+wizard.what_to_do.folder_host_success=Voc\u00ea configurou uma pasta hospedeira com sucesso\!\n
+wizard.what_to_do.host_pcs_join=Outros computadores j\u00e1 podem associar-se a esta pasta
+wizard.what_to_do.host_pcs.select=Por favor selecione o diret\u00f3rio para ser o hospedeiro
+wizard.what_to_do.invite.select_local=Por favor selecione o diret\u00f3rio local de destino para os arquivos
 wizard.key=w
 wizard.load_invitation.add_to_friends=Adicionar {0} em amigos
 wizard.load_invitation.choose_file=Escolher o arquivo de convite
@@ -1102,7 +1102,7 @@ wizard.load_invitation.select=Selecionar arquivo de convite
 wizard.load_invitation.select_file=Por favor selecione arquivo de convite
 wizard.load_invitation.title=Carregar convite
 wizard.name=Assistente
-wizard.project_panel.folder_project_success=Voc\u00ea configurou a pasta do projeto com sucesso\!\n
+wizard.project_name.folder_project_success=Voc\u00ea configurou a pasta do projeto com sucesso\!\n
 wizard.project_panel.select=Por favor selecione o diret\u00f3tio do projeto
 wizard.project_name.choose=Escolha nome do projeto
 wizard.project_name.enter_name=Digite o nome do seu projeto
@@ -1138,9 +1138,9 @@ wizard.setup_dns.title=Configurar dns (din\u00e2mico)
 wizard.setup_dns.validate=Validar
 wizard.setup_success=Configura\u00e7\u00e3o bem sucedida
 wizard.success_join=Voc\u00ea juntou-se a pasta com sucesso\!
-wizard.sync_pcs_panel.folder_sync_success=Voc\u00ea configurou uma pasta espelhada com sucesso\!\n
-wizard.sync_pcs_panel.pcs_join=Outros computadores j\u00e1 podem juntar-se a esta pasta
-wizard.sync_pcs_panel.select=Por favor selecione o diret\u00f3rio que dever\u00e1 ser espelhado
+wizard.what_to_do.sync_pcs.success=Voc\u00ea configurou uma pasta espelhada com sucesso\!\n
+wizard.what_to_do.sync_pcs.pcs_join=Outros computadores j\u00e1 podem juntar-se a esta pasta
+wizard.what_to_do.sync_pcs.select=Por favor selecione o diret\u00f3rio que dever\u00e1 ser espelhado
 wizard.webservice.enter_account=Por favor entre sua identifica\u00e7\u00e3o para conectar-se ao Armazenamento Online
 wizard.webservice.learn_more=O que \u00e9 o Armazenamento Online do PowerFolder?
 wizard.webservice.login=Conectar-se ao Armazenamento Online
